# ChangeLog for dev-util/adobe-air-sdk-bin
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Mar 2010; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  +adobe-air-sdk-bin-1.5.3.ebuild, +files/adobe-air-sdk-bin.xml,
  +files/airstart, +files/airstart.desktop, +metadata.xml:
  New ebuild for bug #267555.
