@@ -2,6 +2,6 @@ AUX adobe-air-sdk-bin.xml 733 RMD160 6eefe40d9609e229db418652036219e0f0f5d4b1 SH
 AUX airstart 545 RMD160 96b54f5fdc8ac2cc0814c5691847a0685a9a6205 SHA1 46b91c7c85f53c3e8c9b54914877241539997731 SHA256 668155a4751e99686c08823cea1d4b1c640f2d5adf80ffbd886322675ec61f2c
 AUX airstart.desktop 367 RMD160 120565cdbba01cb89c6f5d1433703f04bdd1d38d SHA1 70161b83e7e2e90005fdd947f1c020c5dcaa3686 SHA256 0b1670898b8dc5c295df88e5c84b486b5ad4ca3da99d8d918b39ce3418d331ed
 DIST AdobeAIRSDK-1.5.3.tbz2 19700568 RMD160 14d5b296c3cc87c1aa1149f30a4f9df39c1f10ab SHA1 0232a4ecf327fc8bcdfdf7fa14f5d81bddc6112c SHA256 aa33f9b38b57138d28403d5abf0654071bd972999cf8308ddec45b5866a81c8b
-EBUILD adobe-air-sdk-bin-1.5.3.ebuild 1481 RMD160 92b105f6d4f34c759ca692e2b5127fe295cf5e45 SHA1 77535db77cedf0fb2b68787c55d5860bfd079e0f SHA256 5696242e571a2f48b9bce129663bb3d00fe995adc33e6c6f7c8aa556ec6dd9c0
-MISC ChangeLog 346 RMD160 278b4eb9ef179d4a78c49b1858acae07bab6440c SHA1 948584bb01651356e9db827ed85729d23370860b SHA256 a565871fa429c98c9fad523f7cb6308d2558bb3aca6a622741505a0debbb302f
+EBUILD adobe-air-sdk-bin-1.5.3.ebuild 2086 RMD160 eedd32a4c8a0a0528320e31f43ae954feb209946 SHA1 cbca78d879c2d73201a84bd192a5d9e793ce9815 SHA256 a680d0619e132d3b1efd7ad772b18e8bcf970eeaa2a1672bfccd99c08fe35860
+MISC ChangeLog 456 RMD160 eddb81d0aa6c2211b280724bf9cc8af53509827c SHA1 1dcec6da391f8ea7043677dba642ada01bb692bf SHA256 541697edba9845003deb38ed771bd8d72e137ea5f02aca90d78439f661301f6b
 MISC metadata.xml 171 RMD160 ed284df01c230fc7990a6b5888b39166d23f29ba SHA1 f3d64a69044b710e23fb874b3ee4cd338858c8b4 SHA256 a7b30fbacd0e4c312c07a3efac112a3794c81d134442d8104325734d03425adf
