@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  31 Mar 2010; Piotr Szymaniak <lazy_bum@o2.pl>
+  adobe-air-sdk-bin-1.5.3.ebuild:
+  Updated for x86 support.
+
   08 Mar 2010; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
   +adobe-air-sdk-bin-1.5.3.ebuild, +files/adobe-air-sdk-bin.xml,
   +files/airstart, +files/airstart.desktop, +metadata.xml:
